# k_aug

./: .gitignore  CMakeLists.bak  CMakeLists.txt  LICENSE.txt  README.md  todo.md
src/ASL/: get.ASL
src/ASL_i/: kmatrix.c  makebk  whatevs.c
src/BLAS/: get.BLAS  get.BLAS.old
src/HSL/: ma57_driver.c  ma57_driver.h  mc30_driver.c  mc30_driver.h
src/LAPACK/: get.LAPACK
src/Pardiso/: Makefile  pardiso_driver.c  pardiso_driver.h  pardiso_sym.c
src/common/: config_kaug.h.in
src/interfaces/hsl/: ma57_driver.c  ma57_driver.h  mc19_driver.c  mc19_driver.dummy  mc19_driver.h
src/interfaces/mumps/: Makefile  example.dummy  mumps_driver.c  mumps_driver.h  test_mumps.c  test_mumps.dummy
src/k_aug/: Makefile  assemble_rhs_dcdp.c  assemble_rhs_dcdp.h  assemble_rhs_rh.c  assemble_rhs_rh.h  csr_driver.c  csr_driver.h  dot_driver.c  find_inequalities.c  find_inequalities.h  get_grad_f.c  get_grad_f.h  get_hess_asl_aug.c  get_hess_asl_aug.h  get_jac_asl_aug.c  get_jac_asl_aug.h  inertia_strategy.c  inertia_strategy.h  iteration4_main1.c  iteration4_main1.dummy  iteration4_main_ma_57.c  iteration4_main_ma_57.dummy  k_aug_data.h  main_.c  main_mumps.c  mu_adjust_.bak  mu_adjust_primal.c  mu_adjust_primal.h  sigma_compute.bak  sigma_compute.c  sigma_compute.h  suffix_decl_hand.c  suffix_decl_hand.h
src/k_aug/dot_driver/: Makefile  dot_driver.c
src/kmatrix/: Makefile  Makefile0  Makefile_b0  assemble_corrector_rhs.c  assemble_corrector_rhs.h  assemble_rhs_dcdp.c  assemble_rhs_dcdp.h  assemble_rhsds.c  assemble_rhsds.h  assemble_rhsdsv3.c  assemble_rhsdsv3.h  ccolum.c  csort.c  csort.h  csortv2.c  csr_driver.c  csr_driver.h  csr_get.c  find_inequalities.c  find_inequalities.h  get_grad_f.c  get_hess_asl.c  get_hess_asl.h  get_jac_asl.c  get_jac_asl.h  get_jac_asl_aug.c  iteration4_main1.c  k_assemble.c  k_assemble.h  k_assemble_cc.c  k_assemble_cc.h  kmalloc.c  kmalloc.h  kmatrix.c  kmatrix0.c  kmatrix2.c  kmatrix_b0.c  kmatrix_corrector.c  mptr.c  mu_adjust_primal.c  (+16 more)
src/kmatrix/dot_driver/: Makefile
src/kmatrix/iteration1/: Makefile  Makefile_hess_aug  get_hess_asl_aug.c  get_hess_asl_aug.h  iteration1_main.c  iteration1_main_hess_aug.c  iteration1_main_wpard_tst.c  suffix_decl_hand.c  suffix_decl_hand.h
src/kmatrix/iteration2/: Makefile  get_jac_asl_aug.h  iteration2_main1.c  rhs_red_hess  suffix_decl_hand.c  suffix_decl_hand.h
src/kmatrix/iteration2/dot_driver/: Makefile  dot_driver.c
src/kmatrix/iteration4/: Makefile  assemble_rhs_rh.c  csr_driver.c  csr_driver.h  iteration4_main1.c  sigma_compute.c  suffix_decl_hand.c
src/kmatrix/k_corrector/: Makefile  assemble_corrector_rhs_v2.c  assemble_corrector_rhs_v2.h  get_jac_asl_aug.c  iteration4_main1.c  sigma_compute.c  sigma_compute.h  suffix_decl_hand.c  suffix_decl_hand.h
src/kmatrix/old_files/: csort.c  csort.h
src/matrix/: Makefile  dpotri_driver.c  dpotri_driver.h  dsyev_driver.c  dsyev_driver.h  kassemble.f  matrixptr.f  sens_update_driver.c  sens_update_driver.h  sens_update_driver_dot.c  sens_update_driver_dot.h  vec_mat_prd.c  vec_mat_prd.dummy
src/matrix/mc21/: Makefile  mc21.c  mc21driver.c
src/matrix/mc58/: Makefile  mc5877driver.c  mc58driver.c
src/nltrunk/: cstr2.nl  dummy_1.nl  ineq_con.nl  mzhao.nl  nlfile.nl
test/: SemiBatchPolymerization.nl  SemiBatchPolymerization1.nl  badfact.nl  cstr_jo.nl  dgy.nl  dummy.nl  failinv.nl  ineq_2.nl  k_augdirect.nl  mhe_rh.nl  mhe_rh_1.nl  mhe_rh_2.nl  mhe_rh_3.nl  mhe_s.nl  mod_large_errors.nl  mod_small_errors.nl  mzhao_bfb.nl  mzhao_test.nl  nlfile1.nl  problem.nl  saif2.nl  saif3.nl  silly.nl  silly_vcname.nl  testmu.nl  testmu2.nl  tstb.nl
test/pyomo_/: red_hess_k_aug.py  sens_kaug.py  sens_kaug_dcdp.py
